[gd_scene load_steps=5 format=3 uid="uid://buu65oavp74hy"]

[ext_resource type="Script" path="res://timer_control.gd" id="1_myngh"]
[ext_resource type="Texture2D" uid="uid://dj21u0ksfwsi0" path="res://icons/start.svg" id="2_f62lk"]
[ext_resource type="Texture2D" uid="uid://cv2riop8os88y" path="res://icons/edit.svg" id="3_fthuv"]
[ext_resource type="Texture2D" uid="uid://cmt7uv5ywxvu0" path="res://icons/delete.svg" id="4_jet7o"]

[node name="TimerControl" type="Control"]
custom_minimum_size = Vector2(640, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -416.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myngh")

[node name="Vbc" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LineEditTimerName" type="LineEdit" parent="Vbc"]
layout_mode = 2
size_flags_vertical = 4
text = "测试字符测试字符测试字符测试字符测试字符测试字符测试字符测试字符"
alignment = 1
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="Vbc"]
layout_mode = 2

[node name="LabelTimerDisplay" type="Label" parent="Vbc/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "22:40:33"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnStartPause" type="Button" parent="Vbc/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_f62lk")

[node name="BtnEdit" type="Button" parent="Vbc/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("3_fthuv")

[node name="BtnDelete" type="Button" parent="Vbc/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("4_jet7o")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[connection signal="pressed" from="Vbc/HBoxContainer/BtnStartPause" to="." method="_on_btn_start_pause_pressed"]
[connection signal="pressed" from="Vbc/HBoxContainer/BtnDelete" to="." method="_on_btn_delete_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
